--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "styled-components": "^6.1.8",
     "tailwindcss": "^3.4.1",
+    "twin.macro": "^3.4.1",
     "typescript": "^5.4.3",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
